--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -9,7 +9,6 @@ on:
 
 jobs:
   build-android:
-    # Only run the job if the provided password is correct
     if: ${{ github.event.inputs.password == '1234' }}
     runs-on: ubuntu-latest
 
@@ -18,7 +17,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # 2. Set up Java environment (required for Android)
+      # 2. Set up Java environment
       - name: Set up Java Development Kit
         uses: actions/setup-java@v4
         with:
@@ -31,23 +30,29 @@ jobs:
         with:
           channel: 'stable'
 
-      # 4. Extract the zipped source code into the workspace
+      # 4. Create a clean, valid Flutter project structure
+      - name: Create Flutter Project Skeleton
+        run: flutter create --org com.shadow ping
+
+      # 5. Unzip the source code into a temporary directory
       - name: Extract Source Code
-        run: unzip source.zip -d .
+        run: unzip source.zip -d temp_source
 
-      # 5. Navigate into the Flutter project and get dependencies
+      # 6. Copy your custom files into the new project, overwriting the defaults
+      - name: Integrate Custom App Code
+        run: cp -r temp_source/ping/* ping/
+
+      # 7. Get dependencies for the complete project
       - name: Get Flutter Dependencies
-        run: |
-          cd ping
-          flutter pub get
+        working-directory: ./ping # Run command inside the project folder
+        run: flutter pub get
         
-      # 6. Build the APK in release mode
+      # 8. Build the release APK
       - name: Build Release APK
-        run: |
-          cd ping
-          flutter build apk --release
+        working-directory: ./ping # Run command inside the project folder
+        run: flutter build apk --release
 
-      # 7. Upload the generated APK as a downloadable artifact
+      # 9. Upload the generated APK as a downloadable artifact
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
